# agent-recall

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-05-14-v1-adapter-refactor.md  2026-05-15-mcp-server.md
docs/superpowers/specs/: 2026-05-15-mcp-server-design.md
scripts/: bump-version.sh
skill-template/agent-recall/: REFERENCE.md
skill-template/conversation-search/: SKILL.md
src/agent_recall/: __init__.py  cli.py  mcp_server.py
src/agent_recall/adapters/: claude.py  gemini.py
src/agent_recall/core/: __init__.py  indexer.py  search.py  summarization.py
src/agent_recall/skill/: REFERENCE.md  SKILL.md
src/conversation_search/: cli.py
src/conversation_search/adapters/: base.py  claude.py  gemini.py
src/conversation_search/core/: indexer.py  search.py  summarization.py
src/conversation_search/data/: schema.sql
tests/: test_cli.py  test_date_filtering.py  test_date_utils.py  test_full_content_search.py  test_index_new.py  test_indexer_adapter.py  test_mcp_server.py  test_schema_migration.py  test_search.py  test_search_pair_detection.py  test_source_filter.py  test_summarization.py
tests/adapters/: test_base_types.py  test_claude_adapter.py  test_gemini_adapter.py
