[project]
name = "agent-recall"
version = "0.1.0"
description = "Search your past Claude Code, Codex, and Gemini CLI conversations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [
    {name = "laurynas-pliuskys"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
agent-recall = "conversation_search.cli:main"

[project.urls]
Homepage = "https://github.com/laurynas-pliuskys/agent-recall"
Issues = "https://github.com/laurynas-pliuskys/agent-recall/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conversation_search"]

[tool.hatch.build.targets.wheel.force-include]
"src/conversation_search/data/schema.sql" = "conversation_search/data/schema.sql"
