[project]
name = "agent-recall"
version = "0.1.0"
description = "Search your past Claude Code, Codex, and Gemini CLI conversations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["mcp>=1.0,<2"]
authors = [
    {name = "laurynas-pliuskys"}
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
agent-recall     = "agent_recall.cli:main"
agent-recall-mcp = "agent_recall.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_recall"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_recall/data/schema.sql" = "agent_recall/data/schema.sql"
